--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,20 @@
     "name": "xamplifier/reviews",
     "description": "Fetch vendor reviews such as Google, Facebook and maybe others.",
     "type": "library",
+    "repositories":
+    [
+            {
+                "type": "vcs",
+                "url": "https://github.com/xamplifier/php-graph-sdk"
+            }
+    ],
     "require": {
-        "php": "^7.0",
-        "google/apiclient": "^2.0",
-        "facebook/graph-sdk": "^5.6"
+        "php": "^8.0",
+        "google/apiclient": "^2.12.1",
+        "nickdnk/graph-sdk": "^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "^9.5.11",
         "larapack/dd": "^1.1"
     },
     "license": "MIT",
